--- a/react-app-package/package.json
+++ b/react-app-package/package.json
@@ -21,5 +21,8 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
-  }
+  },
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
