--- a/react-app-package/package.json
+++ b/react-app-package/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "An app built using npm react package and not cdn",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
