--- a/react-app-package/package.json
+++ b/react-app-package/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2"
   },
   "browserslist": [
     "last 2 versions"
