--- a/react-app-package/package.json
+++ b/react-app-package/package.json
@@ -18,6 +18,13 @@
   },
   "homepage": "https://github.com/aloklearning/namastey-react-learning#readme",
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.1",
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "parcel": "^2.15.4"
   },
   "dependencies": {
