--- a/react-app-package/package.json
+++ b/react-app-package/package.json
@@ -4,6 +4,7 @@
   "description": "An app built using npm react package and not cdn",
   "scripts": {
     "test": "jest",
+    "watch-test": "jest --watch",
     "start": "parcel index.html",
     "build": "parcel build index.html"
   },
